--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME = 'serenityhub'
+DB_NAME = 'test'
 SECRET_KEY = 'SerenityHub'
 MA_USER = 'asoyy'
 MA_PASSWORD = ''
-MA_SERVER = 'mongodbatlas_url'
+MA_SERVER = ''
